Multiple minor fixes to trackers, overflows and more.

--- a/docs/css/slideform.css
+++ b/docs/css/slideform.css
@@ -4,33 +4,53 @@ form.slideform-form {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   overflow: hidden;
   position: relative;
-  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+  form.slideform-form .slideform-track {
+    overflow: hidden;
+    flex: 1; }
+  form.slideform-form .slideform-wrapper {
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease; }
   form.slideform-form .slideform-slide {
     height: 100vh;
-    padding-bottom: 100px;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    overflow: auto;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     -webkit-overflow-scrolling: touch;
-    opacity: .1;
-    transition: opacity .8s ease; }
+    opacity: 0;
+    -webkit-transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease;
+    overflow: auto; }
     form.slideform-form .slideform-slide.active {
       opacity: 1; }
     @media screen and (max-width: 767px) {
       form.slideform-form .slideform-slide {
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
         justify-content: flex-start; } }
   form.slideform-form .slideform-group {
     max-width: 600px;
     width: 90%;
     padding: 30px;
-    margin: 0 auto; }
-  form.slideform-form .slideform-wrapper {
-    transition: all 0.5s ease; }
+    margin: 0 auto;
+    box-sizing: border-box; }
   form.slideform-form .slideform-btn {
     -webkit-appearance: none;
     height: 40px;
@@ -43,6 +63,7 @@ form.slideform-form {
     background: #FF7F11;
     border-color: #FF7F11;
     color: #fff;
+    -webkit-transition: all .15s ease;
     transition: all .15s ease;
     outline: none; }
     form.slideform-form .slideform-btn:disabled {
@@ -68,10 +89,13 @@ form.slideform-form {
     font-size: 16px;
     line-height: 1.6em;
     margin-bottom: 15px; }
+  form.slideform-form a {
+    -webkit-tap-highlight-color: transparent; }
   form.slideform-form input[type="text"], form.slideform-form input[type="email"], form.slideform-form input[type="tel"], form.slideform-form input[type="number"], form.slideform-form textarea {
     width: 100%;
     padding: 15px;
     font-size: 20px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     border: none;
     outline: none;
@@ -93,6 +117,7 @@ form.slideform-form {
     left: -9999px; }
     form.slideform-form .options-list input[type=checkbox]:checked + span:after, form.slideform-form .options-list input[type=radio]:checked + span:after {
       opacity: 1;
+      -webkit-transform: scale(1);
       transform: scale(1); }
     form.slideform-form .options-list input[type=checkbox] + span, form.slideform-form .options-list input[type=radio] + span {
       display: inline-block;
@@ -122,7 +147,9 @@ form.slideform-form {
         text-align: center;
         line-height: 30px;
         opacity: 0;
+        -webkit-transform: scale(3);
         transform: scale(3);
+        -webkit-transition: all .3s ease;
         transition: all .3s ease; }
   form.slideform-form .options-list input[type=radio] + span:before {
     border-radius: 50%; }
@@ -153,6 +180,7 @@ form.slideform-form {
       width: auto;
       text-align: center;
       cursor: pointer;
+      -webkit-transition: all .3s ease;
       transition: all .3s ease;
       border-radius: 4px;
       font-weight: 600; }
@@ -165,15 +193,17 @@ form.slideform-form {
     display: none; }
   form.slideform-form .slideform-footer {
     background: #fff;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
     padding: 0 15px;
     border-top: 1px solid #f6f6f6;
     z-index: 1000;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 50px; }
     form.slideform-form .slideform-footer .slideform-btn {
@@ -190,6 +220,8 @@ form.slideform-form {
     display: inline-block;
     overflow: hidden;
     line-height: 0;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
     margin-right: 20px; }
     form.slideform-form .slideform-progress-bar span {
@@ -197,6 +229,7 @@ form.slideform-form {
       width: 0%;
       height: 100%;
       background: #FF7F11;
+      -webkit-transition: all 0.5s ease;
       transition: all 0.5s ease; }
 
 @font-face {
